tests/positive/rule1_averaging.safe
-- Test: rule1_averaging
-- Description: Compute average of sensor readings without overflow.
--   Uses wide intermediate arithmetic so that the sum of 10 readings
--   (each in 0..1000) stays within mathematical integers. The final
--   result is narrowed back to the Reading range on return.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/05-assurance.md#5.3.6.p25:e8253bd7
-- Expected: ACCEPT

package sensor_average

   subtype reading is integer (0 to 1000);
   subtype sensor_count is integer (1 to 10);
   subtype reading_sum is integer (0 to 10_000);
   type readings is array (sensor_count) of reading;

   --  Average: compute mean of sensor readings.
   --  Sum of 10 values each in 0..1000 is at most 10_000,
   --  well within 64-bit signed range. Division by 10 yields
   --  a result in 0..1000, fitting Reading.
   function average (data : readings) returns reading
      sum : reading_sum = 0;

      for i in sensor_count
         --  Sum ranges from 0 to I * 1000.
         --  The accumulator is explicitly bounded to 0..10_000.
         sum = sum + reading_sum (data (i));

      --  Narrowing point (return): Sum / 10 is in 0..1000.
      return reading (sum / 10);
