tests/negative/neg_rule1_overflow.safe
-- Test: neg_rule1_overflow
-- Description: Integer arithmetic that may overflow 64-bit intermediate range.
--   Multiplying two values near Long_Long_Integer.Last produces a result
--   that cannot be proven within 64-bit signed range.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p129:9f3b1394
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Expected: REJECT intermediate_overflow

package overflow_test

   subtype big is integer (0 to 9_999_999_999_999_999);

   --  Multiply: the product of two Big values can exceed 64-bit signed range.
   --  9_999_999_999_999_999 * 9_999_999_999_999_999 exceeds 2^63 - 1.
   --  A conforming implementation shall reject this expression.
   function multiply (a, b : big) returns big

      return a * b;  -- ERROR: intermediate may exceed 64-bit range

